# koiboard

./: .gitignore  Cargo.toml
data/: data.db
entity/src/: koi.rs  lib.rs  prelude.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20250210_152252_init_table.rs
src/: main.rs
src/handler/: mod.rs
